show ysod in prod

--- a/Scoretastic/Web.config
+++ b/Scoretastic/Web.config
@@ -20,6 +20,7 @@
         <add namespace="System.Web.Routing" />
       </namespaces>
     </pages>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
