marked home sprk as content

--- a/Scoretastic/Scoretastic.csproj
+++ b/Scoretastic/Scoretastic.csproj
@@ -124,7 +124,7 @@
     <Content Include="fubu-content\fubumvc-diagnostics.zip" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Endpoints\Home\home.spark" />
+    <Content Include="Endpoints\Home\home.spark" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
