--- a/src/Scoretastic.Web/Scoretastic.csproj
+++ b/src/Scoretastic.Web/Scoretastic.csproj
@@ -126,6 +126,9 @@
   <ItemGroup>
     <Content Include="Endpoints\Home\home.spark" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Shared\Application.spark" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
