get less css flowing

--- a/src/Scoretastic.Web/packages.config
+++ b/src/Scoretastic.Web/packages.config
@@ -5,7 +5,8 @@
   <package id="FubuCore" version="0.9.4.114" />
   <package id="FubuLocalization" version="0.9.4.114" />
   <package id="FubuMVC" version="0.9.3.740" />
-  <package id="FubuMVC.References" version="0.9.3.740" />
+  <package id="FubuMVC.Less" version="0.0.1.23" />
+  <package id="FubuMVC.References" version="0.9.3.743" />
   <package id="FubuMVC.Spark" version="0.9.3.740" />
   <package id="FubuMVC.Validation" version="0.4.0.216" />
   <package id="FubuValidation" version="0.4.0.216" />
