--- a/src/Scoretastic.Web/Scoretastic.csproj
+++ b/src/Scoretastic.Web/Scoretastic.csproj
@@ -44,14 +44,14 @@
     <Reference Include="FubuLocalization">
       <HintPath>..\..\packages\FubuLocalization.0.9.4.114\lib\FubuLocalization.dll</HintPath>
     </Reference>
-    <Reference Include="FubuMVC.Core">
-      <HintPath>..\..\packages\FubuMVC.References.0.9.3.740\lib\net40\FubuMVC.Core.dll</HintPath>
+    <Reference Include="FubuMVC.Core, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FubuMVC.References.0.9.3.743\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Spark">
       <HintPath>..\..\packages\FubuMVC.Spark.0.9.3.740\lib\net40\FubuMVC.Spark.dll</HintPath>
     </Reference>
-    <Reference Include="FubuMVC.StructureMap">
-      <HintPath>..\..\packages\FubuMVC.References.0.9.3.740\lib\net40\FubuMVC.StructureMap.dll</HintPath>
+    <Reference Include="FubuMVC.StructureMap, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FubuMVC.References.0.9.3.743\lib\net40\FubuMVC.StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Validation">
       <HintPath>..\..\packages\FubuMVC.Validation.0.4.0.216\lib\FubuMVC.Validation.dll</HintPath>
@@ -99,8 +99,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\login-sprite.png" />
     <Content Include="Content\scripts\foo.js" />
+    <Content Include="Content\scripts\less-1.2.2.min.js" />
     <Content Include="Content\styles\bar.css" />
+    <Content Include="Content\styles\home.less" />
     <Content Include="Global.asax" />
     <Content Include="Shared\bindings.xml" />
     <Content Include="Web.config" />
@@ -132,7 +135,12 @@
   <ItemGroup>
     <Content Include="Shared\Application.spark" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="fubu-content\fubumvc.less.zip" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\styles\grid.less" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
