--- a/src/Scoretastic.Web/Scoretastic.csproj
+++ b/src/Scoretastic.Web/Scoretastic.csproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <Content Include="Content\styles\grid.less" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="application.scripts.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
